# py-dw-url-aleatoria

./: LICENSE.txt  MANIFEST.in  README.md  README_EN.md  ajudaNavegadores.py  aplicativo.py  deep-web-url-aleatoria.sh  main.py  mostrarURLs.py  setup.cfg  setup.py  urls.db
src/: ajudaNavegadores.py  ajuda_redes.py  configurar_icone.py  definir_cor.py  main.py  mostrar_urls.py  urls.db
src/ico/: dw_ico.xbm
src/icon/: icon.xbm
