[metadata]
author=João Vítor S. F.
description-file=README.md
license=MIT
license_file=LICENSE.txt

classifier=
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Natural Language :: Portuguese (Brazilian)

[options]
python_requires= >= 3
